# simple_fighter

./: .gitignore  Cargo.toml  README.md  ppo.py  todo
.github/workflows/: macos.yml
resources/: character1.json  config.json
resources/ai/: best_v1.safetensors  best_v2.safetensors  best_v3.safetensors  best_v4.safetensors  best_v5.safetensors  best_v6.safetensors  best_v7.safetensors  best_v8.safetensors
resources/character1/: character1.json  character2.json  config.json
resources/scenes/: agent_left.safetensors  agent_right.safetensors  dqn_agent1_weights.safetensors  dqn_agent1_weights_NEW.safetensors  dqn_agent2_weights.safetensors  dqn_agent2_weights_NEW.safetensors  ppo_agent1_weights.safetensors  ppo_agent1_weights_NEW.safetensors  ppo_agent2_weights.safetensors  ppo_agent2_weights_NEW.safetensors  ppo_agent2_weights_v2.safetensors
src/: game.rs  main.rs  ring_buf.rs
src/game/: ai.rs  boxes.rs  character.rs  input.rs  net.rs  physics.rs  projectile.rs  render.rs  scene.rs  stage.rs
src/game/ai/: dqn.rs  env.rs  ppo.rs  training.rs
src/game/ai/training/: mod.rs  trainer_pool.rs
src/game/character/: deserialize.rs  state.rs
src/game/deserialize/: character.rs  game.rs  mod.rs
src/game/net/: client.rs  host.rs  listener.rs  matching.rs  stream.rs
src/game/render/: animation.rs
src/game/scene/: connecting.rs  gameplay.rs  hosting.rs  local_play.rs  main_menu.rs  matching.rs  online_play.rs  round_start.rs  spectate_ai.rs  verses_ai.rs
src/game/scene/gameplay/: during_round.rs  round_start.rs
