[package]
name = "fighter"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug", "train_agents"]
debug = []
train_agents = []

[dependencies]
bincode = "2.0.1"
bitflags = "2.9.4"
candle-core = { version = "0.9.1", features = ["cuda"] } # Use "cuda" if training
candle-nn = "0.9.1"
image = "0.25.8"
rand = "0.9.2"
sdl3 = { version = "0.16.1", features = ["build-from-source-static"] }
sdl3-src = { version = "3.2.24" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spin_sleep = "1.3.3"
